--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -59,9 +59,18 @@
 							<img class="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
 							<img class="minus-btn" src="../../../assets/image/my-page/minus.png">
 						</li>
-						<li id="menuList"><a href="">서울 근교 코스</a></li>
-						<li id="menuList"><a href="">웃겨 자빠질 코스</a></li>
-						<li id="menuList"><a href="">기어가는 코스</a></li>
+						<li id="menuList">
+							<a href="./bookmark-ex.html">서울 근교 코스 </a>
+							<img class="editName" src="../../../assets/image/my-page/edit.png">
+						</li>
+						<li id="menuList">
+							<a href="">웃겨 자빠질 코스</a>
+							<img class="editName" src="../../../assets/image/my-page/edit.png">
+						</li>
+						<li id="menuList">
+							<a href="">기어가는 코스</a>
+							<img class="editName" src="../../../assets/image/my-page/edit.png">
+						</li>
 					</ol>
 				</div>
 				
