--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -50,10 +50,11 @@
 .menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; overflow:scroll;}
 .menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
 .menuBar .bmStar {width: 20px; height: 20px;}
-
 .menuBar .menu2 #bookmark-btn {text-align:right}
 .menuBar .plus-btn {width: 20px; height: 20px;}
 .menuBar .minus-btn {width: 20px; height: 20px;}
+.menuBar #menuList .editName {width: 16px; height: 16px; float:right; color: gray;}
+
 
 .menuBar .menu3 {width:(100%-padding); height: (20%-padding); text-align:left;  padding:20px 30px; }
 .menuBar .menu3 #members {font-size: 18px; font-weight:bold; }
