--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -56,6 +56,7 @@
 							<td>
 								<img class="image" src="../../../assets/image/board/window.jpg">
 								<img class="image" src="../../../assets/image/board/flower.jpg">
+								<!-- 
 								<div class="course-container" onclick="window.location='../course/c_viewform.html';">
 									<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
 									<div class="course-info">
@@ -67,10 +68,10 @@
 										</p>
 										<div class="tag-blue"><p>런닝</p></div>
 										<div class="tag-pink"><p>어려움</p></div>
-									</div> <!-- course-info -->
-								</div> <!-- course-container -->
+									</div>
+								</div>
+								 -->
 								
-								<!-- 
 								<div class="chart">
 									<table id="together_chart">
 										<thead>
@@ -99,7 +100,7 @@
 										</tbody>
 									</table>
 								</div>
-								 -->
+								
 							</td>
 						</tr>
 					</tbody>
