--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -30,23 +30,24 @@
 			</div> <!-- nav -->
 		</div> <!-- header -->
 	
-		<h1>함께하기</h1>
-		
-		<!-- 소분류 카테고리 -->
-		<div id="top_side">
-			<ul>
-				<li class="category"><a href="">전체</a></li>
-				<li class="category">|</li>
-				<li class="category"><a href="">진행중</a></li>
-				<li class="category">|</li>
-				<li class="category"><a href="">마감</a></li>
-			</ul>
-		</div><!-- top_side -->
+		<div id="content">
+			<h1>함께하기</h1>
 			
-			<br><br><br>
 			
+			<!-- 소분류 카테고리 -->
+			<div id="top_side">
+				<ul>
+					<li><a href="">전체</a></li>
+					<li>|</li>
+					<li><a href="">진행중</a></li>
+					<li>|</li>
+					<li><a href="">마감</a></li>
+				</ul>
+			</div><!-- top_side -->
+				
+				
 			<!-- 함께하기 만들기 버튼 -->
-			<div class="">
+			<div id="together-nav">
 				<div id="to_make">
 					<button type="submit" id="together_make">함께하기 만들기</button>
 				</div>
@@ -66,9 +67,8 @@
 						</li>
 					</ul>
 				</div><!-- rightside -->
-			</div>
+			</div><!-- together-nav -->
 			
-			<br><br><br>
 			
 			<!-- 함께하기 리스트 -->
 			<div id="list">
@@ -189,7 +189,6 @@
 				</div><!-- table(chart) -->
 			</div>
 				
-			<br>
 			
 			<!-- 더 많은 리스트 보여주기 버튼 -->
 			<div id="more_btn">
@@ -197,7 +196,7 @@
 					<span class="glyphicon glyphicon-chevron-down"></span>
 				</button>
 			</div><!-- more_btn -->
-			
+		</div> <!-- content -->
 	</div><!-- wrap -->
 
 
