--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -3,6 +3,7 @@
 @import "includes.css";
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
+#wrap>#content {margin: auto; max-width: 1200px;}
 
 /******************** 게시판 머리글 ********************/
 
@@ -17,32 +18,31 @@ h1 {
 }
 
 /******************* 소분류 카테고리 *******************/
-
-ul, ol, li	{
+#top_side {
+	margin: 20px auto;
+	display: flex;
+}
+#top_side > ul {
+	margin:auto;
+}
+#top_side > ul > li	{
 	list-style-type: none;
 	float: left;
+	font-size: 20px;
+	margin: 0px 8px;
 }
 /** 밑줄, 글자색 없애기 **/
-a {
+/* a {
 	text-decoration: none;
 	color: inherit;
-}
-#top_side {
-	margin-left: 43.8%;
-	margin-top: 17px;
-}
-.category {
-	font-size: 20px;
-	margin-left: 8px;
-	margin-right: 8px;
-}
+} */
+
 
 /***************** 함께하기 만들기 버튼 *****************/
-
+#together-nav {width:100%; height:90px;}
 #to_make {
 	float: left;
 	margin-top: 15px;
-	margin-left: 4.9%;
 }
 #together_make {
 	float: left;
@@ -56,22 +56,28 @@ a {
 /****************** 태그와 참여 분류 ******************/
 
 #rightside {
-	margin-left: 86%;
+	float: right;
 	padding:35px 43px;
 	font-size : 13pt;
+}
+#rightside ul > li {
+	float: left;
 }
 #tag_btn {margin-left: 7px;}
 
 /******************** 함께하기 표 ********************/
+#list {
+	height: auto;
+	margin-top : 20px;
+}
 
-table {
+#list .chart table {
 	width: 335px;
 	height: 150px;
-	margin-left: 4.37%;
-	margin-bottom: 4.37%;
 	border: solid 1px;
 	float: left;
 	border: solid 1px #ccc;
+	margin: 20px 20px;
 }
 .chart {
 	text-align: center;
@@ -124,13 +130,11 @@ table {
 /*************** 함께하기 리스트 더보기 버튼 ***************/
 
 #more_btn {
-	margin-top: 80px;
-	margin-left: 19%;
+	display: inline-block;
 }
 #more {
 	width: 45px;
 	height: 45px;
-	margin-left: 36%;
 	border-radius: 50px;
 	color: #fff;
 	background-color: #000;
