--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -64,7 +64,7 @@
 					<tr>
 						<th>공지</th>
 						<td class="center">공지</td>
-						<td>(필독)글쓰기 전 확인해 주세요.[1985]</td>
+						<td><a>(필독)글쓰기 전 확인해 주세요.[1985]</a></td>
 						<td class="center">관리자</td>
 						<td class="center">35482</td>
 						<td class="center">2022.02.15</td>
@@ -73,7 +73,7 @@
 					<tr>
 						<th>1</th>
 						<td class="center">[소통]</td>
-						<td>도림천 다녀오는 길![21] <span class="glyphicon glyphicon-picture"></span></td>
+						<td><a>도림천 다녀오는 길![21] <span class="glyphicon glyphicon-picture"></span></a></td>
 						<td class="center">신림러</td>
 						<td class="center">47</td>
 						<td class="center">2022.07.25</td>
@@ -82,7 +82,7 @@
 					<tr>
 						<th>2</th>
 						<td class="center">[함께]</td>
-						<td>한강 사진 공유~[14] <span class="glyphicon glyphicon-picture"></span></td>
+						<td><a>한강 사진 공유~[14] <span class="glyphicon glyphicon-picture"></span></a></td>
 						<td class="center">프리러너</td>
 						<td class="center">21</td>
 						<td class="center">2022.07.25</td>
@@ -91,7 +91,7 @@
 					<tr>
 						<th>3</th>
 						<td class="center">[소통]</td>
-						<td>러닝화 구매 후기[4] <span class="glyphicon glyphicon-picture"></span></td>
+						<td><a>러닝화 구매 후기[4] <span class="glyphicon glyphicon-picture"></span></a></td>
 						<td class="center">하이슈즈</td>
 						<td class="center">17</td>
 						<td class="center">2022.07.25</td>
@@ -100,7 +100,7 @@
 					<tr>
 						<th>4</th>
 						<td class="center">[소통]</td>
-						<td>관악산 정상뷰[16] <span class="glyphicon glyphicon-picture"></span></td>
+						<td><a>관악산 정상뷰[16] <span class="glyphicon glyphicon-picture"></span></a></td>
 						<td class="center">올하이킹</td>
 						<td class="center">54</td>
 						<td class="center">2022.07.25</td>
@@ -109,7 +109,7 @@
 					<tr>
 						<th>5</th>
 						<td class="center">[후기]</td>
-						<td>한강 코스에서 공사 진행중이네요;[96]</td>
+						<td><a>한강 코스에서 공사 진행중이네요;[96]</a></td>
 						<td class="center">알림러</td>
 						<td class="center">168</td>
 						<td class="center">2022.07.25</td>
@@ -118,7 +118,7 @@
 					<tr>
 						<th>6</th>
 						<td class="center">[소통]</td>
-						<td>집 겨우 도착[0]</td>
+						<td><a>집 겨우 도착[0]</a></td>
 						<td class="center">히유</td>
 						<td class="center">2</td>
 						<td class="center">2022.07.25</td>
@@ -127,7 +127,7 @@
 					<tr>
 						<th>7</th>
 						<td class="center">[소통]</td>
-						<td>강남 산책 코스 등록했어요! 많이 이용해 주세요![5]</td>
+						<td><a>강남 산책 코스 등록했어요! 많이 이용해 주세요![5]</a></td>
 						<td class="center">직장노예</td>
 						<td class="center">33</td>
 						<td class="center">2022.07.24</td>
@@ -136,7 +136,7 @@
 					<tr>
 						<th>8</th>
 						<td class="center">[질문]</td>
-						<td>등산 배낭 공구하실 분??[186]</td>
+						<td><a>등산 배낭 공구하실 분??[186]</a></td>
 						<td class="center">장비빨</td>
 						<td class="center">78</td>
 						<td class="center">2022.07.24</td>
@@ -145,7 +145,7 @@
 					<tr>
 						<th>9</th>
 						<td class="center">[질문]</td>
-						<td>ㅇㅇ빌딩 옆 top1 산책 코스에서 차키 보신 분ㅜㅠ[19]</td>
+						<td><a>ㅇㅇ빌딩 옆 top1 산책 코스에서 차키 보신 분ㅜㅠ[19]</a></td>
 						<td class="center">매직핸드</td>
 						<td class="center">34</td>
 						<td class="center">2022.07.24</td>
@@ -154,7 +154,7 @@
 					<tr>
 						<th>10</th>
 						<td class="center">[후기]</td>
-						<td>내일 폭염이라네요ㅜ][2]</td>
+						<td><a>내일 폭염이라네요ㅜ][2]</a></td>
 						<td class="center">날씨예민러</td>
 						<td class="center">18</td>
 						<td class="center">2022.07.23</td>
