--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -187,11 +187,265 @@
 						</tbody>
 					</table>
 				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
 			</div>
 			
 		</div> <!-- content -->
+		
+		<div class="footer">
+			<div class="footer-text">
+				<p>주식회사 조아</p>
+				<p>대표 : 최보승</p>
+				<p>사업자 번호 : 123-456-789</p>
+				<p>서울특별시 관악구 봉천동 862 - 1</p>
+				<br>
+				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
+				<p>tel. 02 - 1111 - 1111</p>
+				<p>fax. 02 - 1111 - 1111</p>
+				<p>email. joa@joa.co.kr</p>
+			</div>
+			<br>
+			<div class="footer-btn">
+				<button id="footerbtn" type="button" name="" value="">자주묻는 질문</button>
+				<button id="footerbtn" type="button" name="" value="">1:1 문의</button>
+			</div>
+			<br>
+			<hr class="my-hr1">
+			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+	
+		</div> <!-- footer -->
 	</div><!-- wrap -->
-
-
+	
 </body>
 </html>
