즐겨찾기수정

--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -61,316 +61,158 @@
 		
 		<div class="resultView">
 			<div class="resultList">
-				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  					<div class="panel panel-default">
-    					<div class="panel-heading" role="tab" id="headingOne">
-      						<h4 class="panel-title">
-        						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-									<p id="listTitle">즐겨찾기1(이름변경가능)</p>
-								</a>
-							</h4>
+				<p id="listTitle"></p>
+				<ol>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
 						</div>
-					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-						<div class="panel-body">
-							<ol>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart-off.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">신나는 코스</p>
-											<p id="courseInfo">홍길동</p>
-											<p id="courseInfo">조회수2 * 22.07.01</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">이건아닌데...</p>
-											<p id="courseInfo">고길동</p>
-											<p id="courseInfo">조회수2 * 22.06.30</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">깐따삐야 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수18 * 22.06.29</p>
-									  	</div>
-								  	</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">집에 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수11 * 22.06.21</p>
-									 	</div>
-									</div>
-								</li>
-								
-								
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">신나는 코스</p>
-											<p id="courseInfo">홍길동</p>
-											<p id="courseInfo">조회수2 * 22.07.01</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">이건아닌데...</p>
-											<p id="courseInfo">고길동</p>
-											<p id="courseInfo">조회수2 * 22.06.30</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">깐따삐야 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수18 * 22.06.29</p>
-									  	</div>
-								  	</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">집에 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수11 * 22.06.21</p>
-									 	</div>
-									</div>
-								</li>
-							</ol>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
 						</div>
-    				</div>
-  				</div>
-  				<div class="panel panel-default">
-    				<div class="panel-heading" role="tab" id="headingTwo">
-      					<h4 class="panel-title">
-        					<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								<p id="listTitle">즐겨찾기222(이름변경가능)</p>
-								</a>
-							</h4>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
 						</div>
-					<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
-						<div class="panel-body">
-							<ol>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">신나는 코스</p>
-											<p id="courseInfo">홍길동</p>
-											<p id="courseInfo">조회수2 * 22.07.01</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">이건아닌데...</p>
-											<p id="courseInfo">고길동</p>
-											<p id="courseInfo">조회수2 * 22.06.30</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">깐따삐야 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수18 * 22.06.29</p>
-									  	</div>
-								  	</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">집에 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수11 * 22.06.21</p>
-									 	</div>
-									</div>
-								</li>
-							</ol>
+					</li>
+					
+					
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
 						</div>
-				    </div>
-				  </div>
-				  
-				  
-				  <div class="panel panel-default">
-    				<div class="panel-heading" role="tab" id="headingThree">
-      					<h4 class="panel-title">
-        					<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-								<p id="listTitle">33333즐찾3333333</p>
-								</a>
-							</h4>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
 						</div>
-					<div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
-						<div class="panel-body">
-							<ol>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">신나는 코스</p>
-											<p id="courseInfo">홍길동</p>
-											<p id="courseInfo">조회수2 * 22.07.01</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">이건아닌데...</p>
-											<p id="courseInfo">고길동</p>
-											<p id="courseInfo">조회수2 * 22.06.30</p>
-									  	</div>
-									</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">깐따삐야 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수18 * 22.06.29</p>
-									  	</div>
-								  	</div>
-								</li>
-								<li>
-									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<div class="img-icons">
-										  	<div class="like-bookmark">
-												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
-												<img class="bookmark" src="../../../assets/image/main/star.png">
-											</div>
-									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-									  	</div>
-									  	<div id="textBox">
-											<p id="courseName">집에 가는 길</p>
-											<p id="courseInfo">둘리</p>
-											<p id="courseInfo">조회수11 * 22.06.21</p>
-									 	</div>
-									</div>
-								</li>
-							</ol>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
 						</div>
-				    </div>
-				  </div>
-				  
-				</div>
+					</li>
+					
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
+						</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
+						</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
+						</div>
+					</li>
+					
+					
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
+						</div>
+					</li>
+					<li>
+						<div style="cursor: pointer;" onclick="window.location='';">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
+						</div>
+					</li>
+					
+				</ol> 
 			</div>
 		</div>
+		
 		
 		
 		<!-- 메인 푸터  자리-->
