--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -88,7 +88,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
