--- a/webapp/WEB-INF/views/course/view-course.html
+++ b/webapp/WEB-INF/views/course/view-course.html
@@ -56,12 +56,12 @@
 				<div class="course-view-tap">
 					<ul>
 						<li>
-							<div class="tabbtn selected" style="cursor: pointer;" onclick="window.location='./c_viewForm.html';">
+							<div class="tabbtn selected" style="cursor: pointer;" onclick="window.location='./view-course.html';">
 								<a>코스정보</a>
 							</div>
 						</li>
 						<li>
-							<div class="tabbtn" style="cursor: pointer;" onclick="window.location='./r_viewForm.html';">
+							<div class="tabbtn" style="cursor: pointer;" onclick="window.location='./view-record.html';">
 								<a>기록보기</a>
 							</div>
 						</li>
