페이지 추가

--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 #wrap>#content {margin: auto; max-width: 1200px; height: auto;}
+a:link {color: #000;}
+a:visited {color: #000;}
+a:hover {color: #000;}
+a:active {color: #000;}
 
 /******************** 게시판 머리글 ********************/
 
@@ -60,18 +64,11 @@ h1 {
 	padding:35px 43px;
 	font-size : 13pt;
 }
-#rightside ul > li {
-	float: left;
-}
+#rightside ul > li {float: left;}
 #tag_btn {margin-left: 7px;}
 
 /******************** 함께하기 표 ********************/
-#list {
-	height: auto;
-	margin-top : 20px;
-	display: block;
-	overflow: auto;
-}
+
 #list .chart table {
 	width: 335px;
 	height: 150px;
@@ -79,6 +76,13 @@ h1 {
 	float: left;
 	border: solid 1px #ccc;
 	margin: 20px 20px;
+	margin-left: 35px;
+}
+#list {
+	height: auto;
+	margin-top : 20px;
+	display: block;
+	overflow: auto;
 }
 /* .chart {
 	text-align: center;
@@ -126,5 +130,19 @@ h1 {
 	background-color: #fff;
 	border: solid 1px #9e9e9e;
 	color: #9e9e9e;
+}
+
+/********************** 페이지 **********************/
+
+#page {
+	display: grid;
+	place-items: center;
+	margin-top: 50px;
+	margin-bottom: 80px;
+}
+.ul, .ol, .li	{
+	list-style-type: none;
+	float: left;
+	margin-left: 15px;
 }
 	
