--- a/webapp/assets/css/board.css
+++ b/webapp/assets/css/board.css
@@ -4,6 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 
+a:link {color: #000;}
+a:visited {color: #000;}
+a:hover {color: #000;}
+a:active {color: #000;}
+
 /******************** 게시판 머리글 ********************/
 
 h1 {
