--- a/webapp/WEB-INF/views/together/together-writeForm.html
+++ b/webapp/WEB-INF/views/together/together-writeForm.html
@@ -12,8 +12,8 @@
 <script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<div id="wrap">
-	
+
+
 	<!-- 헤더 -->
 	<div id="header">
 			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
@@ -34,6 +34,9 @@
 				</ul>
 			</div> <!-- nav -->
 		</div> <!-- header -->
+
+
+<div id="wrap">
 		
 	<div id="content">
 		<!-- 타이틀 -->
@@ -243,9 +246,33 @@
 		
 	</div>
 
+	
+</div><!-- wrap -->
 
-	<!-- 푸터 -->
-</div>
+
+<!-- 푸터 -->
+	<div class="footer">
+		<div class="footer-text">
+			<p>주식회사 조아</p>
+			<p>대표 : 최보승</p>
+			<p>사업자 번호 : 123-456-789</p>
+			<p>서울특별시 관악구 봉천동 862 - 1</p>
+			<br>
+			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
+			<p>tel. 02 - 1111 - 1111</p>
+			<p>fax. 02 - 1111 - 1111</p>
+			<p>email. joa@joa.co.kr</p>
+		</div>
+		<br>
+		<div class="footer-btn">
+			<button id="footerbtn" type="button" name="" value="">자주묻는 질문</button>
+			<button id="footerbtn" type="button" name="" value="">1:1 문의</button>
+		</div>
+		<br>
+		<hr class="my-hr1">
+		<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+
+	</div> <!-- footer -->
 
 </body>
 </html>
