--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -144,6 +144,29 @@
 			<button type="submit" id="list">목록</button>
 			
 			<br><br><br><br><br><br><br><br><br><br>
+			
+			<div class="footer">
+				<div class="footer-text">
+					<p>주식회사 조아</p>
+					<p>대표 : 최보승</p>
+					<p>사업자 번호 : 123-456-789</p>
+					<p>서울특별시 관악구 봉천동 862 - 1</p>
+					<br>
+					<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
+					<p>tel. 02 - 1111 - 1111</p>
+					<p>fax. 02 - 1111 - 1111</p>
+					<p>email. joa@joa.co.kr</p>
+				</div>
+				<br>
+				<div class="footer-btn">
+					<button id="footerbtn" type="button" name="" value="">자주묻는 질문</button>
+					<button id="footerbtn" type="button" name="" value="">1:1 문의</button>
+				</div>
+				<br>
+				<hr class="my-hr1">
+				<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+		
+			</div> <!-- footer -->
 		
 	</div><!-- wrap -->	
 
