상세보기 수정

--- a/webapp/WEB-INF/views/course/view-record.html
+++ b/webapp/WEB-INF/views/course/view-record.html
@@ -228,6 +228,29 @@
 								</div>
 							</li>
 							
+							<li>
+								<div class="record-full-content">
+									<div class="record-txt">
+										<div class="record-content">
+											<span class="record">
+												<span class="bold"><img src="../../../assets/image/course/footprint.png" width="12px">박깜이</span>
+												<span></span>
+											</span>
+										</div>
+										<div class="record-info">
+											<span>22.07.18 10:03</span>
+											<span></span>
+											<span></span>
+											<span class="box blue">산책</span>
+											<span class="box pink">어려움</span>
+										</div>
+									</div>
+									
+									<div class="record-img">
+										
+									</div>
+								</div>
+							</li>
 						</ul>
 					</div>
 					
