--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -21,7 +21,7 @@
 			
 			<div id="nav">
 				<ul>
-					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../together/together.html">함께하기</a></li>
 					<li><a href="../board/board.html">게시판</a></li>
 					<li><a href="../best/best.html">베스트</a></li>
 					<li><a href="../map/map.html">지도</a></li>
