사진 다중 선택

--- a/webapp/WEB-INF/views/board/writeform.html
+++ b/webapp/WEB-INF/views/board/writeform.html
@@ -57,7 +57,7 @@
 			<!-- 사진 첨부 -->
 			<div id="file_line">
 				<p id="file">사진첨부</p>
-				<input type="file" id="filebox">
+				<input type="file" id="filebox" multiple="multiple">
 			</div>
 			
 			<!-- 코스 선택 -->
