--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -64,147 +64,161 @@
 				<p id="listTitle"></p>
 				<ol>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
+								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
+								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
 						  	</div>
 					  	</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
+								<p id="courseInfo">후기글0</p>
 						 	</div>
 						</div>
 					</li>
 					
 					
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
+								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 					  	</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
+								<p id="courseInfo">후기글0</p>
 						 	</div>
 						</div>
 					</li>
 					
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
+								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
+								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 					  	</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
+								<p id="courseInfo">후기글0</p>
 						 	</div>
 						</div>
 					</li>
 					
 					
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 						</div>
 					</li>
 					<li>
-						<div style="cursor: pointer;" onclick="window.location='';">
+						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
+								<p id="courseInfo">후기글0</p>
 						  	</div>
 						</div>
 					</li>
