--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -19,14 +19,16 @@
 .resultList {display:inline-block; text-align:center;  padding: 50px 33px 0px 33px;}
 
 .resultList #listTitle {display:center; font-size: 18px; text-align:left;  padding:0px; margin-bottom:10px;}
+.resultList .listBox {height:360px;}
 .resultList ol {width:100%; display :center; }
 .resultList li {width:(25%-margin);float : left ; list-style: none; margin:0px 5px 30px 15px}
 .resultList .img-icons {width:260px; height: 186px ; padding:0px; position:relative;}
 .resultList .like-bookmark {position: absolute; top:10%; left:88%; width:100%;transform:translate(-50%, -50%);}
 .resultList li .courseImg {width:260px; height: 186px ; padding:0px;}
-.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 60px ; padding-left:5px;}
-.resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 20px; }
-.resultList li #textBox #courseInfo {font-size:13px; color: gray; line-height: 16px;}
+.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 80px ; padding-left:5px; margin-top:5px; line-height:60px;}
+.resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 20px; padding-bottom:5px;}
+.resultList li #textBox #courseInfo {font-size:13px; color: gray; line-height: 20px;}
+.resultList li #textBox .newpost {width:20px; height:20px; vertical-align:bottom;}
 
 
 
