지난 기간 함께하기

--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -102,13 +102,13 @@
 				</div><!-- table(chart) -->
 				
 				<div class="chart">
-					<table>
+					<table class="over">
 						<thead>
 							<tr class="top">
-								<th class="line_top">2022/07/24 - 2022/07/30</th>
-								<th class="mark">
-									<button class="bookmark">
-										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+								<th class="date_over">2022/07/24 - 2022/07/30</th>
+								<th class="mark_over">
+									<button class="bookmark_over">
+										<img class="image_over" src="../../../assets/image/together/bookmarks_black.png">
 									</button>
 								</th>
 							</tr>
@@ -121,9 +121,9 @@
 								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 							</tr>
 							<tr>
-								<th colspan="2" class="line_bottom">
+								<th colspan="2" class="line_bottomOver">
 									산책
-									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+									<button type="submit" class="joinOver"><span class="glyphicon glyphicon-user" id="join_iconOver"></span>11/15</button>
 								</th>
 							</tr>
 						</tbody>
